# TerreateAudio

./: CMakeLists.txt  README.md
impls/: ALHelper.cpp  CMakeLists.txt  alobj.cpp  buffer.cpp  context.cpp  source.cpp
includes/: ALHelper.hpp  TerreateAudio.hpp  alobj.hpp  buffer.hpp  context.hpp  defines.hpp  exceptions.hpp  source.hpp
tests/: CMakeLists.txt  TATest.cpp
